# r-minecraft

./: Cargo.toml  LICENSE  README.md
code/mine/: chunk.rs  chunk_manager.rs  shapes.rs
memos/: Rust 냠냠.txt  Rust 할일.txt
prev/: chunk.rs  chunk_manager.rs  debugging.rs  renderer.rs  shapes.rs
src/: aabb.rs  block_texture_sides.rs  chunk.rs  chunk_manager.rs  collisions.rs  constants.rs  debugging.rs  main.rs  raycast.rs  renderer.rs  shader.rs  shapes.rs  texture.rs
src/ecs/: components.rs  mod.rs  resources.rs  systems.rs
src/shaders/: diffuse.frag  diffuse.vert  frag.frag  vert.vert
