[package]
name = "r-minecraft"
version = "0.0.1"
edition = "2021"
# package manager에 rust를 등록하면 version이 따라간다.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.52.0"
rand = "0.8.5"
image = "0.24.7"
itertools = "0.11.0" # => 문제 풀 때 반복자들을 많이 쓴다. # 기존 iterator에 없는 이것저것이 다 들어가 있다
